<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"

    tools:context=".language.LanguageActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_bubble_top_left"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/dimen_45"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_height="match_parent">

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:layout_height="wrap_content">

           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="match_parent"
               style="@style/Text18dpBold"
               android:layout_weight="1"
               android:text="@string/welcome_to_conch"
               android:layout_height="wrap_content"/>

           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="wrap_content"
               style="@style/Text14dpLink"
               android:text="@string/skip"
               android:id="@+id/tvSkip"
               android:layout_height="wrap_content"/>


       </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            style="@style/Button16dpBold"
            android:background="@drawable/button_enable_disable_orange"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:enabled="false"
            android:id="@+id/btnLanguageNext"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_48"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_bubble_bottom_right"
        android:layout_height="wrap_content"/>





</RelativeLayout>