<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/errorContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_standard">

        <ImageView
            android:id="@+id/errorImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_error_warning" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/general_error_header"
            android:textColor="?attr/colorOnText"
            android:textSize="@dimen/text_24"
            app:layout_constraintBottom_toTopOf="@+id/errorSubTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorSubTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/text_16"
            android:textColor="?attr/colorGreyWhite"
            android:textSize="@dimen/text_20"
            tools:text="@string/general_error_message" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/try_again"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
