<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"

    tools:context=".language.LanguageActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_bubble_top_left"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:id="@+id/parentLayout"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/space_60"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                style="@style/Text18dpBold"
                android:layout_weight="1"
                android:text="@string/welcome_to_conch"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                style="@style/Text14dpLink"
                android:text="@string/skip"
                android:id="@+id/tvSkip"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            style="@style/Text18dpBold"
            android:layout_marginTop="@dimen/space_24"
            android:text="@string/signup_as_user"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            style="@style/Text14dpNormal"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/please_signup_to_be_avail_valuable_benefits_in_our_app"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/mobileLayout"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_24"
                android:background="@drawable/bg_edittext"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/mobile"
                    android:padding="@dimen/margin_10"
                    android:inputType="number"
                    android:gravity="start"
                    android:maxLength="10"
                    android:textAllCaps="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    style="@style/Text12dpNormal"
                    android:text="@string/get_otp"
                    android:visibility="visible"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/ivMobileVerified"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"
                    android:src="@drawable/ic_verified"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/tvMobileHelperText"
                android:text="*Enter 10 digit Mobile Number"
                android:textColor="@color/text_third"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_height="wrap_content"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/otpNumberLayout"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_edittext"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:hint="ENTER OTP"
                    android:padding="@dimen/margin_10"
                    android:inputType="number"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    style="@style/Text12dpNormal"
                    android:text="@string/get_otp"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/tvOtpHelperText"
                android:text="*Enter 10 digit Mobile Number"
                android:textColor="@color/text_third"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            style="@style/Button16dpBold"
            android:layout_marginTop="@dimen/space_24"
            android:background="@drawable/button_enable_disable_orange"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:enabled="true"
            android:id="@+id/btnSignUp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_48"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_bubble_bottom_right"
        android:layout_height="wrap_content"/>





</RelativeLayout>